--- a/css/customize-controls.css
+++ b/css/customize-controls.css
@@ -42,8 +42,11 @@
 .customize-control-radio-image .ui-button-text { padding: 0; }
 
 .customize-control-radio-image img {
-	padding: 1px;
-	border:  4px solid transparent;
+	box-sizing: border-box;
+	max-width:  100%;
+	height:     auto;
+	padding:    1px;
+	border:     4px solid transparent;
 }
 
 	.customize-control-radio-image img:hover,
